# koda-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  koda  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
core/: __init__.py  ai.py  auth.py  banner.py  git.py  prompt.py  repl.py  scaffold.py  utils.py
landing/: astro.config.mjs  package-lock.json  package.json
landing/src/components/: Commands.astro  Features.astro  Footer.astro  Hero.astro  Install.astro  Nav.astro  Terminal.astro
landing/src/pages/: docs.astro  index.astro
landing/src/styles/: global.css
templates/: __init__.py  api.py  datascience.py  webapp.py
